# RustDx

./: Cargo.toml
src/: app.rs  camera.rs  cameraController.rs  controllers.rs  main.rs  state.rs  structs.rs
src/content/shaders/: RustDx.wgsl  RustDx2.wgsl
src/controllers/: camera_controller.rs
src/structs/: camera_uniform.rs  instance.rs  texture.rs  vertex.rs
