[package]
name = "RustDx"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29.15", features = ["rwh_05"] }
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.0"
pollster = "0.3.0"
bytemuck = "1.16.0"
anyhow = "1.0"
imgui-wgpu = { git = "https://github.com/benmkw/imgui-wgpu-rs", branch = "wgpu020" }
imgui = "0.12.0"
imgui-winit-support = "0.12.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
